--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -254,6 +254,14 @@ header.masthead .intro-text .intro-heading {
   text-transform: none;
 }
 
+
+.component-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 64px 0;
+}
+
 #portfolio .portfolio-item {
   right: 0;
   margin: 0 0 15px;
