--- a/direflow-components/bz-experience/src/App.css
+++ b/direflow-components/bz-experience/src/App.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   background-color: white;
   box-shadow: 0 4px 9px 0 #375c821c;
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .header-title {
@@ -60,4 +60,9 @@
 .button:hover {
   box-shadow: 4px 4px 8px #16314d63;
   background-color: #40558f;
+}
+
+
+.MuiInputBase-root .MuiInput-root .MuiInput-underline .MuiInputBase-formControl .MuiInput-formControl {
+  padding: 32px;
 }
