--- a/direflow-components/bz-experience/src/activity/ActivityCard.css
+++ b/direflow-components/bz-experience/src/activity/ActivityCard.css
@@ -9,17 +9,34 @@
 .icon-label {
   display: flex;
   flex-direction: row;
+  padding-right: 32px;
 }
-.icon-expand {
-  min-width: 150;
-  margin: auto;
+
+.MuiSvgIcon-root {
+  margin-right: 8px;
 }
+
 .icon-container {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: stretch;
+  justify-content: space-between;
+}
+
+.price-duration-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.icon-expand {
+  justify-self: end;
 }
 .description-container {
   display: flex;
-  align-items: flex-end;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.description-container,p {
+  margin-top: 0;
 }
