--- a/direflow-components/bz-experience/src/activity/ActivityCard.css
+++ b/direflow-components/bz-experience/src/activity/ActivityCard.css
@@ -1,6 +1,10 @@
+p, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto';
+}
+
 .card {
   max-width: 345px;
-  margin: 0 0 32px 0;
+  margin: 0 0 16px 0;
 }
 
 .media {
