--- a/direflow-components/bz-experience/src/activity/ActivityCard.css
+++ b/direflow-components/bz-experience/src/activity/ActivityCard.css
@@ -1,10 +1,22 @@
-p, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Roboto';
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto";
 }
 
 .card {
   max-width: 345px;
   margin: 0 0 16px 0;
+}
+
+.card-picked {
+  border-width: 2;
+  border-color: blueviolet;
+  border-radius: 8;
 }
 
 .media {
@@ -41,10 +53,11 @@ p, h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
-.description-container,p {
+.description-container,
+p {
   margin-top: 0;
 }
 
